[gd_scene load_steps=4 format=3 uid="uid://b7iv2ggy3qd45"]

[ext_resource type="Theme" uid="uid://bvke1eripwx1b" path="res://assets/themes/border_theme.tres" id="1_2xfh4"]
[ext_resource type="StyleBox" uid="uid://60u1jnis73lu" path="res://assets/themes/borde_copado_ky.tres" id="2_3jv8s"]
[ext_resource type="Script" path="res://scenes/menu/pause_menu.gd" id="2_ohv28"]

[node name="PauseMenu" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("1_2xfh4")
script = ExtResource("2_ohv28")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -69.0
offset_right = 53.34
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_3jv8s")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="ReloadButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Reload"

[node name="SettingsButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
